Integrate Fire CI and change test browser to headless Chrome

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "docs:html": "./node_modules/.bin/jsdoc src/* README.md -d docs",
     "docs:md": "./node_modules/jsdoc-to-markdown/bin/cli.js src/* > DOCS.md",
     "test": "npm run lint; npm run karma",
-    "karma": "./node_modules/.bin/karma start test/karma.conf.js --single-run --browsers Chrome",
-    "karma:watch": "./node_modules/.bin/karma start test/karma.conf.js --browsers Chrome",
-    "karma:package": "cd package-test && ./setup && cd .. && ./node_modules/.bin/karma start package-test/karma.conf.js --single-run --browsers Chrome && cd package-test && ./clean",
+    "karma": "./node_modules/.bin/karma start test/karma.conf.js --single-run --browsers ChromeHeadlessNoSandbox",
+    "karma:watch": "./node_modules/.bin/karma start test/karma.conf.js --browsers ChromeHeadlessNoSandbox",
+    "karma:package": "cd package-test && ./setup && cd .. && ./node_modules/.bin/karma start package-test/karma.conf.js --single-run --browsers ChromeHeadlessNoSandbox && cd package-test && ./clean",
     "lint": "./node_modules/.bin/standard --verbose --fix src | ./node_modules/.bin/snazzy",
     "watch": "./node_modules/.bin/webpack --config webpack.config.js -w",
     "autotest": "./node_modules/.bin/supervisor -q -n exit -x ./node_modules/.bin/mocha -- --reporter spec",
